--- a/.env
+++ b/.env
@@ -20,6 +20,7 @@ APP_SECRET=ab24b46ecd940b140f834c30ebe3a289
 
 ###> symfony/mailer ###
 # MAILER_DSN=smtp://localhost
+MAILER_DSN=null://null
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
