--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,12 +18,12 @@ security:
             anonymous: true
             lazy: true
             provider: app_user_provider
-            guard:
-                authenticators:
-                    - App\Security\LoginFormAuthenticator
-                entry_point: App\Security\LoginFormAuthenticator
-            logout:
-                path: app_logout
+            # guard:
+            #     authenticators:
+            #         - App\Security\LoginFormAuthenticator
+            #     entry_point: App\Security\LoginFormAuthenticator
+            # logout:
+            #     path: app_logout
                 # where to redirect after logout
                 # target: app_any_route
 
@@ -38,3 +38,4 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+     - { path: ^/admin, roles: ROLE_ADMIN }
