--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,12 +18,12 @@ security:
             anonymous: true
             lazy: true
             provider: app_user_provider
-            # guard:
-            #     authenticators:
-            #         - App\Security\LoginFormAuthenticator
-            #     entry_point: App\Security\LoginFormAuthenticator
-            # logout:
-            #     path: app_logout
+            guard:
+                authenticators:
+                    - App\Security\LoginFormAuthenticator
+                entry_point: App\Security\LoginFormAuthenticator
+            logout:
+                path: app_logout
                 # where to redirect after logout
                 # target: app_any_route
 
@@ -36,6 +36,6 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
-     - { path: ^/admin, roles: ROLE_ADMIN }
